--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build docker
       run: |
-        docker buildx build --platform linux/arm64 -t $REPO_NAME/$IMAGE_NAME .
+        docker buildx build --platform linux/arm64 -t $REPO_NAME/$IMAGE_NAME ./python-flask-server-generated
 #        docker build ./python-flask-server-generated -t $REPO_NAME/$IMAGE_NAME
     - name: run docker
       run: |
