--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build docker
       run: |
-        docker buildx build --platform linux/arm64 -t $REPO_NAME/$IMAGE_NAME ./python-flask-server-generated
-#        docker build ./python-flask-server-generated -t $REPO_NAME/$IMAGE_NAME
+        docker build ./python-flask-server-generated -t $REPO_NAME/$IMAGE_NAME
     - name: run docker
       run: |
         docker run -d -e 8080:8080 -host=172.17.0.2 $REPO_NAME/$IMAGE_NAME:latest && \
